<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="notice">
		This project is made by IMOitself. Might be publicly available on Github. Feel free to use and modify.
	</string>
    <string name="app_name">Card Game Test</string>
	<string name="you_lose">YOU LOSE!</string>
	<string name="you_win">YOU WIN!</string>
	<string name="hint_tap_to_see_description">tap the route to see its description.</string>
	<string name="hint_tap_anywhere_to_continue">Tap anywhere to continue.</string>
	<string name="use">USE</string>
	<string name="skip">SKIP</string>
	<string name="rickroll">Never gonna give you up.\nNever gonna let you down.\nNever gonna run around and desert you</string>
	<string name="one">ONE</string>
	<string name="text">Text</string>
	<string name="two">TWO</string>

	<string name="initial_scene_txt">
		"
		》label=scene_map
		》scene_id=initial_scene
        》scene_sequences=
        »text:You discovered that your long lost twin is alive.
		»text:You've been searching him for a long time.
        »text:Since you haven't met him, \n he could be dangerous for you.
		»text:So just to make sure, You make your first move.
		»text: Choose which place to start:
        »pick:route_level_1,route_level_2
		»text:On your way there, you bump to each other.
		»text:Without hesitation you attack him first hand.
		"
	</string>
	<string name="routes_txt">
		》label=route_map
        》name=Plains
        》info=flat as heck.
		》level=1
        》length=3
        》enemy_ids=enemy_one
        》scenes=
        ;
		》label=route_map
        》name=Small Forest
        》info=has small creatures.
		》level=1
        》length=3
        》enemy_ids=enemy_one
        》scenes=a
        ;
		》label=route_map
        》name=Rocky Cliffs
		》info=full of rocks, obviously.
		》level=2
        》length=2
        》enemy_ids=enemy_two, enemy_one
        》scenes=a
		;
		》label=route_map
        》name=Coast
        》info=near where the sea at.
		》level=2
        》length=4
        》enemy_ids=enemy_two
        》scenes=a
    </string>
	<string name="players_txt">
		》label=player_map
        》id=player_one
		》name=Player One
        》info=too lazy to name this properly.
		》lives=10
        》energy=5
		》card_ids=basic_attack, basic_attack, breathe, healing, hard_attack
		;
		》label=player_map
        》id=player_two
		》name=Player Two
        》info=too lazy to name this properly.
		》lives=10
        》energy=5
		》card_ids=basic_attack, breathe, reckless_attack, hard_attack
    </string>
	<string name="enemies_txt">
		》label=enemy_map
        》id=enemy_one
		》name=Enemy One
        》info=too lazy to name this properly.
		》lives=10
        》energy=5
		》card_ids=basic_attack
		;
		》label=enemy_map
        》id=enemy_two
		》name=Enemy Two
        》info=too lazy to name this properly.
		》lives=15
        》energy=5
		》card_ids=hard_attack, breathe
    </string>
	<string name="cardpack_txt">
		》label=card_map
		》id=basic_attack
		》name=Basic Attack
		》info=attack 🔪2
		》cost=-2
		》lives=0, -2
		》type=attack
		;
		》label=card_map
		》id=basic_attack_2
		》name=Basic Attack II
		》info=attack 🔪3
		》cost=-2
		》lives=0, -3
		》type=attack
		;
		》label=card_map
		》id=breathe
		》name=Breathe
		》info=energy ⚡+3
		》cost=0
		》energy=+3, 0
		》type=rest
		;
		》label=card_map
		》id=healing
		》name=Healing
		》info=heal ❤+2
		》cost=-2
		》lives=+2, 0
		》type=heal
		;
		》label=card_map
		》id=distract
		》name=Distract
		》info=gain ⏳1
		》cost=-2
		》moves=+1, 0
		》type=
		;
		》label=card_map
		》id=hard_attack
		》name=Hard Attack
		》info=attack 🔪5
		》cost=-4
		》lives=0, -5
		》type=mega_attack
		;
		》label=card_map
		》id=reckless_attack
		》name=Reckless Attack
		》info=attack 🔪4, lose ❤-2
		》cost=-3
		》lives=-2, -4
		》type=mega_attack
	</string>
</resources>
