<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_story_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center">

	<TextView
		android:id="@+id/story_txt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="bottom|center_horizontal"
		android:paddingLeft="25dp"
		android:paddingRight="25dp"
		android:text="@string/rickroll"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="#D0D0D0"
		android:textSize="16sp"/>

	<TextView
		android:id="@+id/choices_hint_txt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:alpha="0.8"
		android:gravity="center_horizontal"
		android:text="@string/hint_tap_to_see_description"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textColor="#D0D0D0"
		android:visibility="gone"/>

	<LinearLayout
		android:id="@+id/choices_parent_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:baselineAligned="false"
		android:gravity="center"
		android:orientation="horizontal"
		android:padding="8dp"
		android:visibility="visible"
		android:scaleX="0.8"
		android:scaleY="0.8">

		<LinearLayout
			android:id="@+id/choice1_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:gravity="center"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/choice1_img"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1.0"
				android:alpha="0.6"
				android:src="@drawable/white_image"
				android:scaleType="fitCenter"/>

			<TextView
				android:id="@+id/choice1_txt"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:lines="2"
				android:text="@string/one"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="#D0D0D0"
				android:textSize="16sp"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1.5"
			android:orientation="vertical"/>

		<LinearLayout
			android:id="@+id/choice2_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:gravity="center"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/choice2_img"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1.0"
				android:alpha="0.6"
				android:src="@drawable/white_image"
				android:scaleType="fitCenter"/>

			<TextView
				android:id="@+id/choice2_txt"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:lines="2"
				android:text="@string/two"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="#D0D0D0"
				android:textSize="16sp"/>

		</LinearLayout>

	</LinearLayout>

	<TextView
		android:id="@+id/hint_txt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1.2"
		android:alpha="0.8"
		android:gravity="center_horizontal"
		android:text="@string/hint_tap_anywhere_to_continue"
		android:textColor="#D0D0D0"/>

</LinearLayout>

